package com.xinxin.designpattern.adapter.interfaceadapter;

public abstract class AbsAdapter implements Interface4{
    @Override
    public void operation1() {

    }

    @Override
    public void operation2() {

    }

    @Override
    public void operation3() {

    }

    @Override
    public void operation4() {

    }
}
