package com.xinxin.designpattern.adapter.interfaceadapter;

public interface Interface4 {
    public void operation1();
    public void operation2();
    public void operation3();
    public void operation4();
}
