@startuml
'https://plantuml.com/class-diagram

interface interface4 {
operation1(): void
operation2(): void
operation3(): void
operation4(): void
}

abstract class AbsAdapter {
operation1(): void
operation2(): void
operation3(): void
operation4(): void
}

class A {
AbsAdapter: AbsAdapter
}

AbsAdapter <.. A
interface4 o-- AbsAdapter


@enduml